main.css
:root {
  --primary: hsl(35, 100%, 68%);
  --primary-dark: hsl(35, 100%, 60%);
  --text: hsl(0, 0%, 24%);
  --link: hsl(255, 18%, 44%);
  --link-light: hsl(255, 18%, 75%);
  --accent: hsl(11,100%,67%);
  --background: hsl(38, 82%, 91%);
  --grey: hsl(0, 0%, 78%);
}

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
  border: 0;
}

*, *:before, *:after {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
  font-size: 62.5%;
}

body {
  font-family: 'Roboto', sans-serif;
  font-size: 1.6rem;
  color: var(--text);
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'IBM Plex Serif', serif;
}

h1 {
  margin-bottom: 1.6rem;
  font-size: 4rem;
}

.title-wrapper {
  text-align: center;
  margin-bottom: 4rem;
}

h2 {
  position: relative;
  display: inline-block;
  text-transform: uppercase;
  text-align: center;
  font-size: 2.4rem;
}

h2::before, h2::after {
  content: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 85.3 4.2'><path d='M1 2c.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4S8.3 3.4 9 2.8c.6-.5.9-.8 1.8-.8.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8s1.2.3 1.8.8c.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8s1.2.3 1.8.8c.7.6 1.5 1.4 3.1 1.4.6 0 1-.4 1-1s-.4-1-1-1c-.8 0-1.2-.3-1.8-.8C81.8.8 81 0 79.4 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8-.8 0-1.2-.3-1.8-.8C72 .8 71.2 0 69.6 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8s-1.2-.3-1.8-.8C62.2.8 61.4 0 59.8 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8s-1.2-.3-1.8-.8C52.4.8 51.6 0 50 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8-.8 0-1.2-.3-1.8-.8C42.6.8 41.8 0 40.2 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8-.8 0-1.2-.3-1.8-.8C32.8.8 32 0 30.4 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8-.8 0-1.2-.3-1.8-.8C23 .8 22.2 0 20.6 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8-.8 0-1.2-.3-1.8-.8C13.2.8 12.4 0 10.8 0S8.4.8 7.7 1.4c-.6.5-.9.8-1.8.8s-1.2-.3-1.8-.8C3.4.8 2.6 0 1 0 .4 0 0 .4 0 1s.4 1 1 1z'/></svg>");
  position: absolute;
  top: 10px;
  width: 80px;
}

h2::before {
  left: -10px;
  transform: translate(-100%, -50%);
}

h2::after {
  right: -10px;
  transform: translate(100%, -50%);
}

h3 {
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
}

a {
  color: var(--link);
  text-decoration: none;
  font-weight: bold;
}

a:hover, a:focus {
  text-decoration: underline;
}

p {
  line-height: 1.5;
}

input, textarea {
  padding: 0.8rem 1.6rem;
  border-radius: 6px;
  border: 1px solid hsl(0, 0%, 78%);
  font-size: 1.4rem;
}

button, input[type="submit"] {
  padding: 1rem 1.6rem;
  border: 1px solid var(--grey);
  background-color: var(--primary);
  text-transform: uppercase;
  border: none;
  cursor: pointer;
  transition: background-color .2s ease-in-out;
  font-size: 1.4rem;
}

button:hover, button:focus, input[type="submit"]:hover, input[type="submit"]:focus {
  background-color: var(--primary-dark);
}

.container {
  max-width: 80rem;
  margin: 0 auto;
  padding: 0 2rem;
}

header, section, footer {
  padding: 3.2rem 0;
}

header {
  background-color:	var(--background);
}

header {
  position: relative;
}

@media screen and (min-width: 800px) {
  header {
    margin-bottom: 12.8rem;
  }
}

.background-wave {
  display: none;
  position: absolute;
  top: 100%;
  width: 100%;
  z-index: 1;
}

.background-wave--past {
  height: 6rem;
  bottom: 0;
  top: auto;
}

.background-shapes {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  background: var(--background);
}

@media screen and (min-width: 800px) {
  .background-wave {
    display: block;
  }
}

.main-nav {
  margin-bottom: 3.2rem;
}

.main-nav ul {
  display: flex;
  justify-content: flex-end;
  list-style: none;
}

.main-nav li:not(:last-of-type) {
  margin-right: 1.6rem;
}

.logo {
  width: 6rem;
  height: 6rem;
  margin-right: 1.6rem;
  padding: 10px;
  background-color: var(--link-light);
  border-radius: 50%;
}

.title {
  display: flex;
  align-items: center;
}

.cta-form {
  margin-top: 6.4rem;
}

.cta-form-wrapper {
  display: flex;
  margin-bottom: 0.8rem;
}

.cta-label {
  display: block;
  margin-bottom: 0.8rem;
}

.cta-text-input {
  border-radius: 6px 0 0 6px;
  border: none;
}

.cta-button {
  border-radius: 0 6px 6px 0;
}

.cta-notice {
  font-style: italic;
  font-size: 1.3rem;
}

.name-wrapper, .email-wrapper, .message-wrapper {
  margin-bottom: 1.6rem;
}

@media screen and (min-width: 800px) {
  .contact-form {
    display: grid;
    grid-template-areas:
      "field-name field-email"
      "field-message field-message";
    grid-gap: 1.6rem;
  }

  .name-wrapper {
    grid-area: field-name;
  }

  .email-wrapper {
    grid-area: field-email;
  }

  .message-wrapper {
    grid-area: field-message;
  }
}

.contact-label {
  display: block;
  margin-bottom: 0.8rem;
}

.contact-field {
  width: 100%;
}

.contribute-message {
  margin-bottom: 3.2rem;
}

.past-events {
  position: relative;
  padding-bottom: 6rem;
  overflow: hidden;
  background: none;
}

.past-events .container {
  position: relative;
}

.pre-icon:before {
  content:"";
  display: inline-block;
  vertical-align: middle;
  width: 2.5rem;
  height: 2.5rem;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  margin-right: 1.6rem;
}
.event-time:before {
  background-image: url(img/icon-calendar.svg);
}
.event-location:before {
  background-image: url(img/icon-location.svg);
}
.event-register:before {
  background-image: url(img/icon-register.svg);
}
.event-report:before {
  background-image: url(img/icon-newspaper.svg);
}

.past-event + .past-event {
  margin-top: 8rem;
}

.event-info {
  flex-shrink: 0;
  padding-right: 4rem;
  margin-bottom: 2rem;
}
.event-info a,
.event-info time,
.event-info p {
  line-height: 2.4;
  display: block;
}

.event-photos img {
  width: 70%;
  border: 4px solid var(--accent);
}
.event-photos img:first-child {
  margin-left: 30%;
}
.event-photos img:last-child {
  margin-top: -15%;
  border-color: var(--primary);
}

.past-event:nth-child(odd) .event-info {
  order: 1;
  padding-right: 0;
}

.past-event:nth-child(odd) .event-photos img:first-child {
  margin-left: 0;
  border-color: var(--primary);
}
.past-event:nth-child(odd) .event-photos img:last-child {
  margin-left: 30%;
  border-color: var(--accent);
}

@media screen and (min-width: 800px) {
  .past-event {
    display: flex;
  }
  .event-info {
    margin-bottom: 0;
  }
  .event-photos img {
    width: 55%;
  }
  .event-photos img:first-child {
    margin-left: 45%;
  }
  .event-photos img:last-child {
    margin-top: -25%;
  }
  .past-event:nth-child(odd) .event-info {
    padding-left: 4rem;
  }
  .past-event:nth-child(odd) .event-photos img:last-child {
    margin-left: 45%;
  }
}

.contribute {
  padding-top: 6rem;
  display: flex;
}

.footer {
  background-color: var(--background);
}

.footer .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.footer-links {
  display: flex;
}

.footer-link {
  display: flex;
}

.footer-link + .footer-link {
  margin-left: 1rem;
}

.icon {
  height: 2rem;
  width: 2rem;
  margin-right: .5rem;
}

